// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visualize Duration Component:  > Should return the right HTML according to format "PTnHnM"  1`] = `
<div>
  <div
    class="response-format-datatype-duree"
  >
    <div
      class="ctrl-select"
    >
      <label
        for="select-format"
      >
        Format
      </label>
      <div>
        <select
          id="select-format"
          name="format"
          placeholder="Format"
        >
          <option
            value=""
          >
            Duration format
          </option>
          <option
            value="PTnHnM"
          >
            hours/minutes
          </option>
          <option
            value="PnYnM"
          >
            years/months
          </option>
        </select>
      </div>
    </div>
    <div>
      <div
        class="response-format-datatype-duree-minimum"
      >
        <div
          class="response-format-datatype-duree-label-minimum"
        >
          Minimum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-minimum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-mihours"
              >
                hours
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-mihours"
                  name="mihours"
                  placeholder="hours"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-miminutes"
              >
                minutes
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-miminutes"
                  name="miminutes"
                  placeholder="minutes"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="response-format-datatype-duree-maximum"
      >
        <div
          class="response-format-datatype-duree-label-maximum"
        >
          Maximum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-maximum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-mahours"
              >
                hours
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-mahours"
                  name="mahours"
                  placeholder="hours"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-maminutes"
              >
                minutes
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-maminutes"
                  name="maminutes"
                  placeholder="minutes"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Visualize Duration Component:  > Should return the right HTML according to format "PnYnM"  1`] = `
<div>
  <div
    class="response-format-datatype-duree"
  >
    <div
      class="ctrl-select"
    >
      <label
        for="select-format"
      >
        Format
      </label>
      <div>
        <select
          id="select-format"
          name="format"
          placeholder="Format"
        >
          <option
            value=""
          >
            Duration format
          </option>
          <option
            value="PTnHnM"
          >
            hours/minutes
          </option>
          <option
            value="PnYnM"
          >
            years/months
          </option>
        </select>
      </div>
    </div>
    <div>
      <div
        class="response-format-datatype-duree-minimum"
      >
        <div
          class="response-format-datatype-duree-label-minimum"
        >
          Minimum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-minimum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-miyears"
              >
                years
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-miyears"
                  name="miyears"
                  placeholder="years"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-mimonths"
              >
                months
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-mimonths"
                  name="mimonths"
                  placeholder="months"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="response-format-datatype-duree-maximum"
      >
        <div
          class="response-format-datatype-duree-label-maximum"
        >
          Maximum
        </div>
        <div
          style="width: 75%;"
        >
          <div
            class="response-format-datatype-duree-maximum"
          >
            <div
              class="ctrl-input "
            >
              <label
                for="input-mayears"
              >
                years
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-mayears"
                  name="mayears"
                  placeholder="years"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
            <div
              class="ctrl-input "
            >
              <label
                for="input-mamonths"
              >
                months
                <span
                  class="ctrl-required"
                >
                  *
                </span>
              </label>
              <div>
                <input
                  id="input-mamonths"
                  name="mamonths"
                  placeholder="months"
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
